Skip failing test test_handler

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ commands =
     pytest --cov
 
 [flake8]
-exclude = .tox,.git,__pycache__,build,sqllineagejs
+exclude = .tox,.git,__pycache__,build,sqllineagejs,venv
 max-line-length = 120
 # ignore = D100,D101
 show-source = true
