--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -14,8 +14,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04, macos-latest, windows-latest]
-        python-version: ['3.7', '3.8', '3.9', '3.10']
+        os: [macos-12]
+        python-version: ['3.7']
 
     steps:
     - uses: actions/checkout@v3
@@ -29,12 +29,6 @@ jobs:
         node-version: '16'
     - name: Install pip dependency
       run: pip install tox codecov
-    - name: Install OS dependency
-      run: |
-         if [ "$RUNNER_OS" == "macOS" ]; then
-              brew install bzip2
-         fi
-      shell: bash
     - name: Script
       run: tox -e py
     - name: After Success
